# NutriBuddy

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  debug_env.py  debug_env_v3.py  deploy_helper.py  list_models.py  pyproject.toml
.cache/: food_cache.json
backend/: config.py  dependencies.py
backend/agent/: graph.py  tools.py
backend/api/: main.py  security.py
backend/api/routes/: __init__.py  chat.py  health.py  labels.py  rag.py  recipe.py  recipes.py  voice.py
backend/api/schemas/: chat.py  common.py  recipe.py
backend/services/: cache.py  food_matcher.py  labels.py  nutrition.py  rag.py  usda_client.py  voice.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: IngredientTable.tsx  LabelBuilder.tsx  Login.tsx  NutritionPreview.tsx  RecipeLab.css  RecipeLab.tsx  ServingControls.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useFoodSearch.ts  useRecipeCalculation.ts  useSpeechRecognition.ts  useVoice.ts
