[project]
name = "nutribuddy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.0",
    "elevenlabs>=2.27.0",
    "fastapi>=0.127.0",
    "firebase-admin>=7.1.0",
    "google-genai>=0.3.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
